<resources>
    <string name="app_name">UserApplication</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="Домой">Домой</string>
    <string name="Каталог">Каталог</string>
    <string name="Корзина">Корзина</string>
    <string name="ЛК">Личный кабинет</string>
    <string name="home">Home</string>
</resources>