<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
       android:title="@string/Домой"
       android:drawable="@drawable/ic_home_black_24dp"
       android:icon="@drawable/ic_home_black_24dp"
       android:id="@+id/homeFragment"/>

    <item
        android:title="@string/Каталог"
        android:id="@+id/catalogFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:drawable="@drawable/ic_notifications_black_24dp" />

    <item
        android:title="@string/Корзина"
        android:drawable="@drawable/ic_notifications_black_24dp"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:id="@+id/basketFragment"/>
    <item
        android:title="@string/ЛК"
        android:drawable="@drawable/ic_person_black_24dp"
        android:icon="@drawable/ic_person_black_24dp"
        android:id="@+id/account"/>
</menu>